--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -1,7 +1,7 @@
 <head>
     <title>Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -100,7 +100,7 @@
 
         function toggleDarkmode() {
             if (darkMode.checked) {
-                link.href = "dark.css";
+                link.href = "/dark.css";
                 link.type = "text/css";
                 link.rel = "stylesheet";
                 link.media = "screen,print";
