--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -1,8 +1,8 @@
 <head>
     <title>Settings - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="dark.css" id="darkStyle">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/dark.css" id="darkStyle">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -13,11 +13,11 @@
         </div>
         <div id="links">
             <a href="./">Scan</a>
-            <a href="users.html">Users</a>
-            <a href="attack.html">Attack</a>
-            <a href="control.html">Control</a>
-            <a href="settings.html" class="active">Settings</a>
-            <a class="right" href="info.html">Info</a>
+            <a href="/users.html">Users</a>
+            <a href="/attack.html">Attack</a>
+            <a href="/control.html">Control</a>
+            <a href="/settings.html" class="active">Settings</a>
+            <a class="right" href="/info.html">Info</a>
         </div>
     </nav>
     <div id="notification"></div>
