Changed links to directory relative URLs

--- a/web_server/html/detector.html
+++ b/web_server/html/detector.html
@@ -1,8 +1,8 @@
 <head>
     <title>Deauth Detector - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/dark.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./dark.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -13,12 +13,12 @@
         </div>
         <div id="links">
             <a href="./">Scan</a>
-            <a href="/users.html">Users</a>
-            <a href="/attack.html">Attack</a>
-            <a href="/control.html">Control</a>
-            <a href="detector.html" class="active">Detector</a>
-            <a href="/settings.html">Settings</a>
-            <a class="right" href="/info.html">Info</a>
+            <a href="./users.html">Users</a>
+            <a href="./attack.html">Attack</a>
+            <a href="./control.html">Control</a>
+            <a href="./detector.html" class="active">Detector</a>
+            <a href="./settings.html">Settings</a>
+            <a class="right" href="./info.html">Info</a>
         </div>
     </nav>
     <div id="notification"></div>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <footer></footer>
-        <script src="js/functions.js"></script>
+        <script src="./js/functions.js"></script>
         <script>
         var allChannels = document.getElementById("detectorAllChannels");
         var channel = document.getElementById("detectorChannel");
