--- a/web_server/html/disabled_.htm
+++ b/web_server/html/disabled_.htm
@@ -1,7 +1,7 @@
 <head>
     <title>Lockdown Mode</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./main.css">
     <meta name="theme-color" content="#E57373">
 </head>
 
