--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -1,8 +1,8 @@
 <head>
     <title>Scan - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/dark.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./dark.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -13,11 +13,11 @@
         </div>
         <div id="links">
             <a href="./" class="active">Scan</a>
-            <a href="/users.html">Users</a>
-            <a href="/attack.html">Attack</a>
-            <a href="/control.html">Control</a>
-            <a href="/settings.html">Settings</a>
-            <a class="right" href="/info.html">Info</a>
+            <a href="./users.html">Users</a>
+            <a href="./attack.html">Attack</a>
+            <a href="./control.html">Control</a>
+            <a href="./settings.html">Settings</a>
+            <a class="right" href="./info.html">Info</a>
         </div>
     </nav>
     <div id="notification"></div>
@@ -38,14 +38,14 @@
                 <div class="card">
                     <table id="apscan"></table>
                     <div class="card-action">
-                    <a onclick="window.location='/users.html'" class="light">Users</a>
-                    <a onclick="window.location='/attack.html'" class="right">Attack</a>
+                    <a onclick="window.location='./users.html'" class="light">Users</a>
+                    <a onclick="window.location='./attack.html'" class="right">Attack</a>
                     </div>
                 </div>
             </div>
         </div>
         <footer></footer>
     </div>
-    <script src="js/functions.js"></script>
-    <script src="js/scan.js"></script>
+    <script src="./js/functions.js"></script>
+    <script src="./js/scan.js"></script>
 </body>
