--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -1,8 +1,8 @@
 <head>
     <title>Attack - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/dark.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./dark.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -13,10 +13,10 @@
         </div>
         <div id="links">
             <a href="./">Scan</a>
-            <a href="/users.html">Users</a>
-            <a href="/attack.html" class="active">Attack</a>
-            <a href="/control.html">Control</a>
-            <a href="/settings.html">Settings</a>
+            <a href="./users.html">Users</a>
+            <a href="./attack.html" class="active">Attack</a>
+            <a href="./control.html">Control</a>
+            <a href="./settings.html">Settings</a>
             <a class="right" href="/info.html">Info</a>
         </div>
     </nav>
@@ -94,8 +94,8 @@
             </div>
         </div>
         <footer></footer>
-        <script src="js/functions.js"></script>
-        <script src="js/attack.js"></script>
+        <script src="./js/functions.js"></script>
+        <script src="./js/attack.js"></script>
     </div>
 </body>
 
