--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -1,8 +1,8 @@
 <head>
     <title>Info - Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/dark.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./dark.css">
     <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -13,11 +13,11 @@
         </div>
         <div id="links">
             <a href="./">Scan</a>
-            <a href="/users.html">Users</a>
-            <a href="/attack.html">Attack</a>
-            <a href="/control.html">Control</a>
-            <a href="/settings.html">Settings</a>
-            <a class="right active" href="/info.html">Info</a>
+            <a href="./users.html">Users</a>
+            <a href="./attack.html">Attack</a>
+            <a href="./control.html">Control</a>
+            <a href="./settings.html">Settings</a>
+            <a class="right active" href="./info.html">Info</a>
         </div>
     </nav>
     <div id="notification"></div>
@@ -125,6 +125,6 @@
             </div>
         </div>
         <footer></footer>
-        <script src="js/functions.js"></script>
-        <script src="js/info.js"></script>
+        <script src="./js/functions.js"></script>
+        <script src="./js/info.js"></script>
 </body>
