Cache-expiration is now adjustable in settings

--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -116,6 +116,12 @@
                             <input type="checkbox" name="cache" id="cache" value="false">
                             <label class="checkbox" for="cache"></label>
                         </div>
+                        <div class="col-12">
+                            <div class="input-container" id="cacheContainer">
+                                <input placeholder=" " id="serverCache" type="number" required="" min="0" max="9999">
+                                <label for="serverCache">Cache expiration time</label>
+                            </div>
+                        </div>
                         <br><br><hr>
                         <div class="col-12">
                             <label for="useLed">Enable LED indicator</label>
