--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -32,7 +32,7 @@
                 <div class="card">
                     <div class="card-content">
                         <p>
-                            Wi-PWN was designed by <a href="https://samdenty99.github.io/about"><b>Sam Denty</b></a>, from the original project by spacehuhn. Wi-PWN is released under the <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> license.
+                            Wi-PWN was designed by <a href="https://samdenty99.github.io/about" tabindex="-1"><b>Sam Denty</b></a>, from the original project by spacehuhn. Wi-PWN is released under the <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> license.
                         </p>
                         <a href="https://samdenty99.github.io">
                             <h2 class="center a light-text">
@@ -40,6 +40,21 @@
                             </h2>
                         </a>
                     </div>
+                    <table>
+                        <form method="POST" action="/update" enctype="multipart/form-data">
+                            <tr>
+                                <td class="onlgr2">OTA update</td>
+                                <td>
+                                    <input type="file" name="update" id="update" accept=".bin">
+                                    <label for="update" class="button no-caps" tabindex="0"></label>
+                                </td>
+                                <td>
+                                    <input type="submit" value="Upload">
+                                </td>
+                            </tr>
+                        </form>
+                        <br>
+                    </table>
                     <div class="card-action">
                         <a href="https://samdenty99.github.io/r?github" target="blank_">Github</a><a href="https://samdenty99.github.io/projects" class="right" target="blank_">Other projects</a>
                     </div>
