Extended touch area for checkboxes

--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -55,9 +55,11 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <input type="checkbox" name="randSSID" id="randSSID" value="false">
-                                <label class="checkbox" for="randSSID"></label>
-                                <label for="randSSID">Generate random</label>
+                                <label for="randSSID" class="checkboxContainer">
+                                    <input type="checkbox" name="randSSID" id="randSSID" value="false">
+                                    <label class="checkbox" for="randSSID"></label>
+                                    Generate random
+                                </label>
                             </div>
                         </div>
                         <div class="row inputCheckbox">
@@ -68,9 +70,11 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <input type="checkbox" name="enc" id="enc" value="false">
-                                <label class="checkbox" for="enc"></label>
-                                <label for="enc">Encrypted</label>
+                                <label for="enc" class="checkboxContainer">
+                                    <input type="checkbox" name="enc" id="enc" value="false">
+                                    <label class="checkbox" for="enc"></label>
+                                    Encrypted
+                                </label>
                             </div>
                         </div>
                     </div>
