--- a/web_server/html/detector.html
+++ b/web_server/html/detector.html
@@ -40,9 +40,11 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <input type="checkbox" name="detectorAllChannels" id="detectorAllChannels" value="false" checked>
-                                <label class="checkbox" for="detectorAllChannels"></label>
-                                <label for="detectorAllChannels">All channels</label>
+                                <label for="detectorAllChannels" class="checkboxContainer">
+                                    <input type="checkbox" name="detectorAllChannels" id="detectorAllChannels" value="false" checked>
+                                    <label class="checkbox" for="detectorAllChannels"></label>
+                                    All channels
+                                </label>
                             </div>
                         </div>
                         <div class="row inputCheckbox">
@@ -53,9 +55,11 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <input type="checkbox" name="invertAlertPin" id="invertAlertPin" value="false">
-                                <label class="checkbox" for="invertAlertPin"></label>
-                                <label for="invertAlertPin">Invert HIGH/LOW</label>
+                                <label for="invertAlertPin" class="checkboxContainer">
+                                    <input type="checkbox" name="invertAlertPin" id="invertAlertPin" value="false">
+                                    <label class="checkbox" for="invertAlertPin"></label>
+                                    Invert HIGH/LOW
+                                </label>
                             </div>
                         </div>
                         <div class="row">
