--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -50,9 +50,11 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <label for="ssidHidden">Hide SSID</label>
-                            <input type="checkbox" name="ssidHidden" id="ssidHidden" value="false">
-                            <label class="checkbox" for="ssidHidden"></label>
+                            <label for="ssidHidden" class="checkboxContainer">
+                                Hide SSID
+                                <input type="checkbox" name="ssidHidden" id="ssidHidden" value="false">
+                                <label class="checkbox" for="ssidHidden"></label>
+                            </label>
                         </div>
                     </div>
                 </div>
@@ -80,24 +82,31 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <label for="randMacAp">Random MAC address</label>
-                            <input type="checkbox" name="randMacAp" id="randMacAp" value="false">
-                            <label class="checkbox" for="randMacAp"></label>
+                            <label for="randMacAp" class="checkboxContainer">Random MAC address
+                                <input type="checkbox" name="randMacAp" id="randMacAp" value="false">
+                                <label class="checkbox" for="randMacAp">
+                            </label>
                         </div>
                         <div class="col-12">
-                            <label for="apScanHidden">Scan for hidden networks</label>
-                            <input type="checkbox" name="apScanHidden" id="apScanHidden" value="false">
-                            <label class="checkbox" for="apScanHidden"></label>
+                            <label for="apScanHidden" class="checkboxContainer">
+                                Scan for hidden networks
+                                <input type="checkbox" name="apScanHidden" id="apScanHidden" value="false">
+                                <label class="checkbox" for="apScanHidden">
+                            </label>
                         </div>
                         <div class="col-12">
-                            <label for="multiAPs">Select multiple networks</label>
-                            <input type="checkbox" name="multiAPs" id="multiAPs" value="false">
-                            <label class="checkbox" for="multiAPs"></label>
+                            <label for="multiAPs" class="checkboxContainer">
+                                Select multiple networks
+                                <input type="checkbox" name="multiAPs" id="multiAPs" value="false">
+                                <label class="checkbox" for="multiAPs">
+                            </label>
                         </div>
                         <div class="col-12">
-                            <label for="multiAttacks">Simultaneous attacks</label>
-                            <input type="checkbox" name="multiAttacks" id="multiAttacks" value="false">
-                            <label class="checkbox" for="multiAttacks"></label>
+                            <label for="multiAttacks" class="checkboxContainer">
+                                Simultaneous attacks
+                                <input type="checkbox" name="multiAttacks" id="multiAttacks" value="false">
+                                <label class="checkbox" for="multiAttacks">
+                            </label>
                         </div>
                     </div>
                 </div>
@@ -107,14 +116,18 @@
                 <div class="card-small smaller">
                     <div class="row">
                         <div class="col-12">
-                            <label for="darkMode">Enable dark mode</label>
-                            <input type="checkbox" name="darkMode" id="darkMode" value="false">
-                            <label class="checkbox" for="darkMode"></label>
+                            <label for="darkMode" class="checkboxContainer">
+                                Enable dark mode
+                                <input type="checkbox" name="darkMode" id="darkMode" value="false">
+                                <label class="checkbox" for="darkMode">
+                            </label>
                         </div>
                         <div class="col-12">
-                            <label for="cache">Enable server caching</label>
-                            <input type="checkbox" name="cache" id="cache" value="false">
-                            <label class="checkbox" for="cache"></label>
+                            <label for="cache" class="checkboxContainer">
+                                Enable server caching
+                                <input type="checkbox" name="cache" id="cache" value="false">
+                                <label class="checkbox" for="cache">
+                            </label>
                         </div>
                         <div class="col-12">
                             <div class="input-container" id="cacheContainer">
@@ -124,9 +137,11 @@
                         </div>
                         <br><br><hr>
                         <div class="col-12">
-                            <label for="useLed">Enable LED indicator</label>
-                            <input type="checkbox" name="useLed" id="useLed" value="false">
-                            <label class="checkbox" for="useLed"></label>
+                            <label for="useLed" class="checkboxContainer">
+                                Enable LED indicator
+                                <input type="checkbox" name="useLed" id="useLed" value="false">
+                                <label class="checkbox" for="useLed">
+                            </label>
                         </div>
                         <div class="col-12">
                             <div class="input-container" id="ledContainer">
@@ -160,9 +175,11 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <label for="beaconInterval">1s Beacon interval</label>
-                            <input type="checkbox" name="beaconInterval" id="beaconInterval" value="false">
-                            <label class="checkbox" for="beaconInterval"></label>
+                            <label for="beaconInterval" class="checkboxContainer">
+                                1s Beacon interval
+                                <input type="checkbox" name="beaconInterval" id="beaconInterval" value="false">
+                                <label class="checkbox" for="beaconInterval">
+                            </label>
                         </div>
                     </div>
                 </div>
