--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -48,9 +48,11 @@
                                     </div>
                                     <br>
                                     <div class="col-12">
-                                        <label for="darkMode">Enable dark mode</label>
-                                        <input type="checkbox" name="darkMode" id="darkMode" value="false" onclick="toggleDarkmode();">
-                                        <label class="checkbox" for="darkMode"></label>
+                                        <label for="darkMode" class="checkboxContainer">
+                                            Enable dark mode
+                                            <input type="checkbox" name="darkMode" id="darkMode" value="false" onclick="toggleDarkmode();">
+                                            <label class="checkbox" for="darkMode"></label>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
