Updated components + improved light mode theme

--- a/web_server/html/control.html
+++ b/web_server/html/control.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./dark.css">
-    <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#106CC8">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                 <div class="card">
                     <table id="controlPins"></table>
                     <div class="card-action">
-                        <a onclick="resetPins()" class="right">Reset entries</a>
+                        <a onclick="resetPins()" class="button right">Reset entries</a>
                     </div>
                 </div>
             </div>
