--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -2,7 +2,7 @@
     <title>Wi-PWN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="./main.css">
-    <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#106CC8">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                                     <p>Only use this software on networks you are authorized to use it on.</p>
                                 </div>
                                 <div class="card-action" onclick="accept()">
-                                    <a class="right">Accept</a>
+                                    <a class="button right">Accept</a>
                                 </div>
                             </div>
                         </div><div id="c2">
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div class="card-action" onclick="cont()">
-                                <a class="right">Continue</a>
+                                <a class="button right">Continue</a>
                             </div>
                         </div><div id="c3">
                             <div class="card-content">
