--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./dark.css">
-    <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#106CC8">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="card-action">
-                        <a class="right" onclick="addSSID()">Add</a>
+                        <a class="button right" onclick="addSSID()">Add</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                         </tr>
                     </table>
                     <div class="card-action">
-                        <a class="right" onclick="saveSSID()">save</a>
+                        <a class="button right" onclick="saveSSID()">save</a>
                     </div>
                 </div>
             </div>
