--- a/web_server/html/detector.html
+++ b/web_server/html/detector.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./dark.css">
-    <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#106CC8">
 </head>
 
 <body>
@@ -72,8 +72,8 @@
                         </div>
                     </div>
                     <div class="card-action">
-                        <a class="light" onclick="saveSettings()">save</a>
-                        <a class="button-primary right" onclick="saveSettings(true)">Save &amp; Start</a>
+                        <a class="button light" onclick="saveSettings()">save</a>
+                        <a class="button right" onclick="saveSettings(true)">save &amp; start</a>
                     </div>
                 </div>
             </div>
