--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./dark.css">
-    <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#106CC8">
 </head>
 
 <body>
@@ -35,8 +35,8 @@
                 <div class="card">
                     <table id="apscan"></table>
                     <div class="card-action">
-                    <a onclick="window.location='./users.html'" class="light">Users</a>
-                    <a onclick="window.location='./attack.html'" class="right">Attack</a>
+                        <a onclick="window.location='./users.html'" class="button light">Users</a>
+                        <a onclick="window.location='./attack.html'" class="button right">Attack</a>
                     </div>
                 </div>
                 <div class="network-info">
